--- a/Html Form&Table/[Bài tập] Tạo bảng nâng cao.html
+++ b/Html Form&Table/[Bài tập] Tạo bảng nâng cao.html
@@ -16,6 +16,9 @@
             border-collapse: collapse;
             border: 1px solid;
         }
+        .den{
+            background: black;
+        }
     </style>
 </head>
 <body>
@@ -23,82 +26,82 @@
     <table>
         <tr>
             <td></td>
-            <td ></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den"  ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
+        </tr>
+        <tr>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
+            <td></td>
+            <td class="den" ></td>
             <td></td>
         </tr>
         <tr>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
+        </tr>
+        <tr>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
         </tr>
         <tr>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
+        </tr>
+        <tr>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
         </tr>
         <tr>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="den" ></td>
         </tr>
         <tr>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
+            <td class="den" ></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="den" ></td>
             <td></td>
         </tr>
     </table>
