--- a/Html Form&Table/[Bài tập] Tạo bảng đơn giản.html
+++ b/Html Form&Table/[Bài tập] Tạo bảng đơn giản.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        table{
+        #bang2{
             width: 800px;
             height: 200px;
         }
-        table, th, td, tr {
+        #bang2, th, td, tr {
             padding: 8px;
             border:1px solid;
             border-collapse: collapse;
@@ -26,15 +26,45 @@
         p{
             color: cornflowerblue;
         }
+        .lechphai{
+            text-align: right;
+        }
+        #bang1{
+            th {
+                text-align: right;
+            }
+        }
+
+
+
 
     </style>
 </head>
 <body>
-<h2>Thời Khóa Biểu</h2>
-<table>
-    <p>Lớp: T09081</p> <p>thời gian học : 13h30-17h30</p>
-    <p>Giáo viên : Khoa NV</p> <p>Ngày học: Thứ 3,5,7</p>
-    <p>Phòng học : Class 3/Lab3</p>
+
+<table id="bang1">
+    <tr>
+        <td></td>
+        <th>Thời Khóa Biểu</th>
+        <th>a</th>
+    </tr>
+    <tr>
+        <td>Lớp: T09081</td>
+        <td></td>
+        <td>thời gian học : 13h30-17h30</td>
+    </tr>
+    <tr>
+        <td>Giáo viên : Khoa NV</td>
+        <td></td>
+        <td>Ngày học: Thứ 3,5,7</td>
+    </tr>
+    <tr>
+        <td>Phòng học : Class 3/Lab3</td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
+<table id="bang2">
     <tr>
 
         <td colspan="3"></td>
