--- a/Html Form&Table/[Bài tập] Tạo form đơn giản.html
+++ b/Html Form&Table/[Bài tập] Tạo form đơn giản.html
@@ -25,8 +25,14 @@
         th{color: white;
             background: chocolate;
         }
+        .xanhnhat{
+            color: blue;
+        }
+        .dacam{
+            color: chocolate;
+        }
 
-        .
+
 
     </style>
 
@@ -39,35 +45,35 @@
             <th colspan="4">Sở Thích của bạn</th>
         </tr>
         <tr>
-            <td class="tittle1">Họ và tên</td>
+            <td class="xanhnhat">Họ và tên</td>
             <td colspan="3"><input type="text" size="30"></td>
         </tr>
         <tr>
-            <td class="tittle1">Email</td>
+            <td class="xanhnhat">Email</td>
             <td colspan="3"><input type="text" size="20"></td>
 
         </tr>
         <tr>
-            <td class="tittle1">Sở thích</td>
-            <td class="ab"><input type="checkbox">Thể thao</td>
-            <td><input type="checkbox">Âm nhạc</td>
-            <td><input type="checkbox">Đọc sách</td>
+            <td class="xanhnhat">Sở thích</td>
+            <td class="dacam"><input type="checkbox">Thể thao</td>
+            <td class="dacam"><input type="checkbox">Âm nhạc</td>
+            <td class="dacam"><input type="checkbox">Đọc sách</td>
         </tr>
         <tr>
             <td></td>
-            <td><input type="checkbox">Lướt web</td>
-            <td><input type="checkbox">Chơi game</td>
-            <td><input type="checkbox">Điện ảnh</td>
+            <td class="dacam"><input type="checkbox">Lướt web</td>
+            <td class="dacam"><input type="checkbox">Chơi game</td>
+            <td class="dacam"><input type="checkbox">Điện ảnh</td>
         </tr>
         <tr>
-            <td></td>
-            <td><input type="checkbox">Du lịch</td>
+            <td class="dacam"></td>
+            <td class="dacam"><input type="checkbox">Du lịch</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td ></td>
-            <td colspan="3"><input type="submit" value="Gửi thông tin">
+            <td colspan="3"><input type="submit" value="Gửi thông tin"> &nbsp;
                 <input type="reset" value="Nhập lại"></td>
         </tr>
     </table>
@@ -75,7 +81,6 @@
     </table>
 
 </form>
-
 
 </body>
 </html>
