--- a/Html Form&Table/[Bài tập] Tạo form lấy survey khách hàng.html
+++ b/Html Form&Table/[Bài tập] Tạo form lấy survey khách hàng.html
@@ -44,7 +44,7 @@
 <input type="checkbox" name="products">Product 2 <br>
 <input type="checkbox" name="products">Product 3 <br>
 <h5> What features would you like to see in the new product</h5>
-<textarea with="80%" height="60%"></textarea>
+<textarea name="" id="" cols="40" rows="10"></textarea>
 <table>
     <tr class="a">
         <th></th>
