--- a/Cau truc dieu kien 1/Thuc hanh luyen tap voi cau truc switch case bai 2.html
+++ b/Cau truc dieu kien 1/Thuc hanh luyen tap voi cau truc switch case bai 2.html
@@ -7,20 +7,19 @@
 <body>
 <script>
 
-    let a = prompt('a?', '');
+    let a = prompt('a?');
     switch (a) {
-        case 0:
+        case '0':
             alert(0);
-            break;
-        case 1:
+            break
+        case '1':
             alert(1);
-            break;
-        case 2:
-        case 3:
+            break
+        case '2':
+        case '3':
             alert('2,3');
             break;
     }
-
     // let a = prompt('a?', '');
     //
     // if (a == 0) {
