--- a/Cau truc dieu kien 2/Switch case Tinh so ngay trong thang.html
+++ b/Cau truc dieu kien 2/Switch case Tinh so ngay trong thang.html
@@ -5,17 +5,20 @@
     <title>Title</title>
 </head>
 <body>
-<table>
-    <tr>
-        <td><label>Nhap thang<input type="number" id="input"></label></td>
-        <td>
-            <button type="button" onclick="count()">Tính số ngày</button>
-        </td>
-        <td>
-            <button type="reset" onclick="reset()">Đặt lại</button>
-        </td>
-    </tr>
-</table>
+<form action="">
+    <table>
+        <tr>
+            <td><label>Nhap thang<input type="number" id="input"></label></td>
+            <td>
+                <button type="button" onclick="count()">Tính số ngày</button>
+            </td>
+            <td>
+                <button type="reset" onclick="reset()">Đặt lại</button>
+            </td>
+        </tr>
+    </table>
+</form>
+
 
 <p id="display"></p>
 <script>
