--- a/Tong quan JavaScript/Thuc hanh hien thi dau ra/Hien thi ket qua su dung ham document write.html
+++ b/Tong quan JavaScript/Thuc hanh hien thi dau ra/Hien thi ket qua su dung ham document write.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<button type="button" onclick="Hienloichao()">Click Me!</button>
+<button type="button" onclick="showMessage();">Click Me!</button>
 <script>
-    function Hienloichao(){
-        console.log('Xin chào')
+    function showMessage(){
+        document.write('Xin chào!');
     }
 </script>
 </body>
